fix: layout spacing

--- a/apps/website/.vuepress/theme/styles/overrides.scss
+++ b/apps/website/.vuepress/theme/styles/overrides.scss
@@ -183,3 +183,8 @@ h4 .header-anchor cds-icon {
 .asset-download-btn cds-icon {
   vertical-align: text-top;
 }
+
+.main-container .content-container .content-area {
+  padding: 0;
+  overflow-x: hidden;
+}
